Changes by Jacob Barkdull 2015-06-22
--------------------------------------------------------------------------------
* hashover/scripts/writecomments.php

	- Password cookie now stored as Blowfish hash (requires a re-login).
	- E-mail cookie now stored as Mcrypt string (requires a re-login).
	- Valid e-mail and HTTP prefix checks now also performed for cookies.
	- Login no longer performs spam check.


* hashover/scripts/encryption.php

	- `decrypt ()` now fails if any encryption hash offset is undefined.


* hashover/scripts/htmloutput.php

	- Password input placeholder and title changes to "Confirm Password" 
	  when editing a comment, as this is what that field is actually for. 
	  It is normally automatically filled by the browser.


* hashover/scripts/cookies.php

	- `clear ()` function now uses `expireCookie ($cookie)` function.
	- `expireCookie ($cookie)` now uses `set ($name [, $value, $date]).


Changes by Jacob Barkdull 2015-06-21
--------------------------------------------------------------------------------
* hashover/themes/default/style.css

	- Fixed: Mobile CSS SVG background-image being applied to actual login 
	  inputs element, instead of :before selector.


Changes by Jacob Barkdull 2015-06-20
--------------------------------------------------------------------------------
* hashover/scripts/javascript-output.php

	- Minor performance and memory optimizations.


* hashover/scripts/jsminifier.php

	- Smarter newline removal.


Changes by Jacob Barkdull 2015-06-19
--------------------------------------------------------------------------------
* Most code has moved to the TildeHash Coding Standard

	- Indention is done with tabs, only one per code block.
	- Curly braces are to be used wherever possible, including switches.
	- Class property and method names use camelCase.
	- Function definition names in the global namespace use snake_case.
	- All variable names, in any scope or namespace, use snake_case.