@@ -1,3 +1,15 @@
+Changes by Jacob Barkdull 2015-06-25
+--------------------------------------------------------------------------------
+* hashover/scripts/setup.php
+
+	- Strip "Magic Quotes" from POST, GET, and COOKIE data if enabled.
+
+
+* hashover/scripts/statistics.php
+
+	- Confirm to coding standard.
+
+
 Changes by Jacob Barkdull 2015-06-22
 --------------------------------------------------------------------------------
 * hashover/scripts/writecomments.php
